Bug 95403 - [GK110] misaligned_gpr spamming dmesg when playing victor vran
Summary: [GK110] misaligned_gpr spamming dmesg when playing victor vran
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/DRI/nouveau (show other bugs)
Version: git
Hardware: x86-64 (AMD64) Linux (All)
: medium minor
Assignee: Nouveau Project
QA Contact: Nouveau Project
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2016-05-14 20:53 UTC by Tom Englund
Modified: 2016-05-15 14:54 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments

Description Tom Englund 2016-05-14 20:53:14 UTC
kernel: 4.5.2
mesa: 11.3.0_devel.81287.59156b2

when playing victor vran dmesg gets spammed with MISALIGNED_GPR and MULTIPLE_WARP_ERRORS, the game runs and i cant notice any particular side effects from it, i have apitraced it and found the bad glDrawElementsInstancedBaseVertex call. karolherbst didnt get it when replaying the trace which is why we suspected its a gk110+ issue.

the call happends in frame 228 and call 372955 according to qapitrace.

trace is a bit big, 372mb compressed.

trace:
https://www.dropbox.com/s/lxrt0oneqaz4mvb/victorvran.tar.xz?dl=1

dmesg:
https://gist.github.com/gulafaran/012338e3c3d07c34e289957cb934f5ed

GL_FRAGMENT_SHADER from qapitrace:
https://gist.github.com/gulafaran/2dfa0998770e3b35468013df07216e71

GL_VERTEX_SHADER from qapitrace:
https://gist.github.com/gulafaran/cb51eae8ba9bdb79ed59ca8988266e39
Comment 1 Ilia Mirkin 2016-05-15 14:54:40 UTC
Should be fixed by:

commit 2ef3cdb07e42d985103b5a3e930b2bba676e920b
Author: Ilia Mirkin <imirkin@alum.mit.edu>
Date:   Sat May 14 19:25:15 2016 -0400

    nvc0/ir: make sure to align the second arg of TXD to 4, as we do for TEX
    
    This was handled in handleTEX(), however the way the logic works, those
    extra arguments aren't added on by then, so it did nothing. Instead we
    must duplicate that bit here. GK110 appears to complain about
    MISALIGNED_GPR, however it's reasonable to believe that GK104 has the
    same requirements.
    
    Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=95403
    Signed-off-by: Ilia Mirkin <imirkin@alum.mit.edu>
    Cc: mesa-stable@lists.freedesktop.org
    Reviewed-by: Samuel Pitoiset <samuel.pitoiset@gmail.com>


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.